--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -54,7 +54,7 @@
 		</div>
 	</div>
 
-	<div class="form-group text-center">
+<!--	<div class="form-group text-center">
 		<div class="col-sm-offset-2 col-sm-10">
 			<a href="/quizes">
 				<button class="btn btn-danger btn-sm" type="button">
@@ -65,6 +65,28 @@
 				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Grabar
 			</button>
 		</div>
+	</div> -->
+
+
+
+
+	<div class="form-group text-center">
+
+		<ul class="tira_botones">
+
+			<li><a class="btn btn_gral btn_cancelar" href="/quizes">
+				Cancelar
+			</a></li>
+
+			<li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
+				Grabar
+			</button></li>
+
+		</ul>
+
 	</div>
+
+
+	
 
 </div>
