--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -90,11 +90,35 @@
 	</div>
 
 	<% if (session.user) { %>
-		<p><a href="/quizes/new"><button type="button" class="btn btn-primary">
+
+
+<!--			<a href="/quizes/new"><button type="button" class="btn btn-primary">
 			<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Crear parte</button></a>
 			<a href="/quizes/mes_index">
 				<button type="button" class="btn btn-primary"><i class="fa fa-calendar"></i> Seleccioinar Mes</button>
-			</a>
+			</a> -->
+
+
+				<ul class="tira_botones">
+
+
+
+					<li><a class="btn btn_gral" href="/quizes/new">
+						Crear Parte
+					</a></li>
+
+
+					<li><a class="btn btn_gral" href="/quizes/mes_index">
+						Selecionar mes
+					</a></li>
+
+				</ul>
+
+
+
+
+
+
 <!--			<a href="/quizes/page"><button type="button" class="btn btn-primary">
 			<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Mas Resultados</button></a>
 		</p> -->
