--- a/views/vasos/index.ejs
+++ b/views/vasos/index.ejs
@@ -48,10 +48,20 @@
 
         <% if (session.user) {
             if (session.user.isAdmin) {%>
-                <p><a href="/vasos/new"><button type="button" class="btn btn-primary">
+
+<!--                <p><a href="/vasos/new"><button type="button" class="btn btn-primary">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Crear vaso</button></a>
 
-                </p>
+                </p> -->
+
+                <ul class="tira_botones">
+
+					<li><a class="btn btn_gral" href="/vasos/new">
+						Crear Vaso
+					</a></li>
+
+				</ul>
+
             <%}%>
         <%}%>
 
