--- a/views/contadores/_form.ejs
+++ b/views/contadores/_form.ejs
@@ -73,7 +73,7 @@
 
 
 
-    <div class="form-group">
+<!--    <div class="form-group">
 		<div class="col-md-10" style="margin-left: 18vw;">
 			<a href="/contadores">
 				<button class="btn btn-danger btn-sm" type="button">
@@ -84,6 +84,27 @@
 				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Grabar
 			</button>
 		</div>
+	</div> -->
+
+    <div class="form-group text-center">
+
+		<ul class="tira_botones">
+
+
+
+			<li><a class="btn btn_gral btn_cancelar" href="/contadores">
+				Cancelar
+			</a></li>
+
+
+			<li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
+				Grabar
+			</button></li>
+
+		</ul>
+
+
+
 	</div>
 
 
