--- a/views/vasos/_form.ejs
+++ b/views/vasos/_form.ejs
@@ -283,7 +283,7 @@
         if (session.user.isAdmin) {%>
 
 
-            <div class="col-md-12">
+<!--            <div class="col-md-12">
                 <div class="form-group">
             		<div class="text-center" style="margin-top: 10px;">
             			<a href="/vasos">
@@ -296,7 +296,27 @@
             			</button>
             		</div>
             	</div>
-            </div>
+            </div> -->
+
+        <div class="col-md-12">
+
+            <div class="form-group text-center">
+
+        		<ul class="tira_botones">
+
+        			<li><a class="btn btn_gral btn_cancelar" href="/vasos">
+        				Cancelar
+        			</a></li>
+
+        			<li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
+        				Grabar
+        			</button></li>
+
+        		</ul>
+
+        	</div>
+
+        </div>
 
 
         <%}%>
