--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,6 +34,9 @@
 	<script type="text/javascript" src="/js/gmaps.js"></script>
 	<script type="text/javascript" src="/js/geoRoutes.js"></script> -->
 
+	<script type="text/javascript" src="/js/pace.js"></script>
+	<link rel="stylesheet" type="text/css" href="/stylesheets/pace.css"/>
+
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 
