--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -85,7 +85,7 @@
 					<li><a href="/contadores"><img src="/images/contador2.png" alt="" /> Contadores </a></li>
 					<li><a href="/quizes/resumen_index"><img src="/images/consumos2.png" alt="" /> Consumos </a></li>
 
-					<li><a href="/siloes"><img src="/images/siloes.png" alt="" /> Ensayos </a></li>
+					<li><a href="/siloes"><img src="/images/probetas.png" alt="" /> Ensayos </a></li>
 					<li><a href="/vasos"><img src="/images/vasos.png" alt="" /> Vasos </a></li>
 
 
@@ -110,7 +110,7 @@
 				</form> -->
 
 				<ul class="nav navbar-nav navbar-right">
-					<div class="form-group" style="color: white">
+					<div class="form-group" style="color: white; font-size: 11px">
 						<%if(!session.user){%>
 							<a href="/login"><img src="/images/user2.png" alt=""> Login&nbsp;</a></li>
 						<%}else{%>
