--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,7 +1,7 @@
 
 <div class="container-fluid animated animated-fast fadeIn margen_superior" id="partes_index">
 
-	<h4><img src="/images/partes3.png" alt="" /> Partes</h4>
+	<h4><img src="/images/partes3.png" alt="" /> Partes de Lecturas</h4>
 
 <!--		<% if (session.user) { %>
 		<div class="btn-group" role="group" aria-label="...">
