--- a/views/siloes/index.ejs
+++ b/views/siloes/index.ejs
@@ -1,7 +1,7 @@
 
 <div class="container-fluid animated animated-fast fadeIn margen_superior" id="siloes_index">
 
-	<h4><img src="/images/siloes.png" alt="" /> Partes de Ensayos</h4>
+	<h4><img src="/images/probetas.png" alt="" /> Partes de Ensayos</h4>
 
 <!--		<% if (session.user) { %>
 		<div class="btn-group" role="group" aria-label="...">
