css table form spinner

--- a/views/quizes/resumen_index.ejs
+++ b/views/quizes/resumen_index.ejs
@@ -2,7 +2,7 @@
 
 <div class="container animated animated-fast fadeIn centrado-v-h margen_superior" id="resumen_index">
 
-    <div class="panel">
+    <div class="panel" style="border:none;">
 
         <h4>Resumen mensual de consumos</h4>
         <br>
