--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,9 +63,10 @@
 
 
 		<div id="inicio-panel">
-				<h1>Gestión de Contadores</h1>
+				<h1>Gestión de Contadores y Ensayos</h1>
 				<h1><%= title %><span style="font-size: 18px"> &copy;</span></h1>
 				<h3>Lecturas y consumos de suministros externos o depósitos</h3>
+				<h3>Ensayos de aguas de piscinas y vasos</h3>
 				<br>
 				<button class="btn btn-info"
 					data-toggle="modal"
@@ -142,7 +143,7 @@
 
 				<h3>Paso 2</h3>
 
-				<p><strong>Configure su instalación.</strong> Defina los contadores y sus parámetros de consumo.</p>
+				<p><strong>Configure su instalación.</strong> Defina los contadores y piscinas.</p>
 
 			</div>
 
@@ -160,7 +161,7 @@
 
 				<h3>Paso 4</h3>
 
-				<p><strong>Cree los partes de lecturas.</strong> Revise los consumos y sus posibles desvíos.</p>
+				<p><strong>Cree los partes de lecturas y de ensayos.</strong> Revise los consumos y sus posibles desvíos.</p>
 
 
 			</div>
@@ -387,8 +388,9 @@
 			        	</div>
 						<br> -->
 						<p>
-							SupCounter<span style="font-size: 9px;">&copy;</span> es una aplicación para la gestión administrativa de consumos procedentes de suministros externos o depósitos.
-							Su ámbito de aplicación es en todas aquellas instalaciones que consten de sistemas de distribución de agua, combustible o electricidad.
+							SupCounter<span style="font-size: 9px;">&copy;</span> es una aplicación para la gestión administrativa de consumos procedentes de suministros externos o depósitos,
+							y de los resultados de los ensayos sobre aguas de pisicinas y vasos.
+							Su ámbito de aplicación es en todas aquellas instalaciones que consten de sistemas de distribución de agua, combustible o electricidad, y piscinas o depóstitos de aguas sujetos a análisis por normativa.
 						</p>
 						<p>Permite obtener en tiempo inmediato los informes sobre consumos, generando avisos sobre posibles desvíos.</p>
 						<p>Reduce alrededor de un 80% el tiempo empleado en sistemas tradicionales.<p>
