--- a/views/siloes/mes_index.ejs
+++ b/views/siloes/mes_index.ejs
@@ -1,7 +1,7 @@
 
 <div class="container animated animated-fast fadeIn centrado-v-h margen_superior" id="mes_index">
 
-    <div class="panel">
+    <div class="panel" style="border:none;">
 
         <h4>Seleccionar periodo</h4>
         <br>
