--- a/views/siloes/show.ejs
+++ b/views/siloes/show.ejs
@@ -80,7 +80,7 @@
 																<label for="ph">Ph m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="ph_m" name="ensayo[ph_m]" value="<%= (ensayos[index].ph_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="ph_m" name="ensayo[ph_m]" value="<%= (ensayos[index].ph_m).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -89,7 +89,7 @@
 																<label for="ph">Ph t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="ph_t" name="ensayo[ph_t]" value="<%= (ensayos[index].ph_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="ph_t" name="ensayo[ph_t]" value="<%= (ensayos[index].ph_t).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -113,7 +113,7 @@
 																<label for="redox">Redox m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="redox_m" name="ensayo[redox_m]" value="<%= (ensayos[index].redox_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="redox_m" name="ensayo[redox_m]" value="<%= (ensayos[index].redox_m).toFixed(1) %>" step="1"/>
 															</div>
 														</div>
 
@@ -122,7 +122,7 @@
 																<label for="redox">Redox t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="redox_t" name="ensayo[redox_t]" value="<%= (ensayos[index].redox_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="redox_t" name="ensayo[redox_t]" value="<%= (ensayos[index].redox_t).toFixed(1) %>" step="1"/>
 															</div>
 														</div>
 
@@ -145,7 +145,7 @@
 																<label for="temp">Temp m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="temp_m" name="ensayo[temp_m]" value="<%= (ensayos[index].temp_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="temp_m" name="ensayo[temp_m]" value="<%= (ensayos[index].temp_m).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -154,7 +154,7 @@
 																<label for="temp">Temp t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="temp_t" name="ensayo[temp_t]" value="<%= (ensayos[index].temp_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="temp_t" name="ensayo[temp_t]" value="<%= (ensayos[index].temp_t).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -177,7 +177,7 @@
 																<label for="recirculacion">Recirc m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="recirculacion_m" name="ensayo[recirculacion_m]" value="<%= (ensayos[index].recirculacion_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="recirculacion_m" name="ensayo[recirculacion_m]" value="<%= (ensayos[index].recirculacion_m).toFixed(1) %>" step="1"/>
 															</div>
 														</div>
 
@@ -186,7 +186,7 @@
 																<label for="recirculacion">Recirc t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="recirculacion_t" name="ensayo[recirculacion_t]" value="<%= (ensayos[index].recirculacion_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="recirculacion_t" name="ensayo[recirculacion_t]" value="<%= (ensayos[index].recirculacion_t).toFixed(1) %>" step="1"/>
 															</div>
 														</div>
 
@@ -253,7 +253,7 @@
 																<label for="lectura">Lectura m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="lectura_m" name="ensayo[lectura_m]" value="<%= (ensayos[index].lectura_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="lectura_m" name="ensayo[lectura_m]" value="<%= (ensayos[index].lectura_m).toFixed(1) %>" step="1"/>
 															</div>
 														</div>
 
@@ -262,7 +262,7 @@
 																<label for="lectura">Lectura t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="lectura_t" name="ensayo[lectura_t]" value="<%= (ensayos[index].lectura_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="lectura_t" name="ensayo[lectura_t]" value="<%= (ensayos[index].lectura_t).toFixed(1) %>" step="1"/>
 															</div>
 														</div>
 
@@ -328,7 +328,7 @@
 																<label for="turbidez">Turbidez m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="turbidez_m" name="ensayo[turbidez_m]" value="<%= (ensayos[index].turbidez_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="turbidez_m" name="ensayo[turbidez_m]" value="<%= (ensayos[index].turbidez_m).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -337,7 +337,7 @@
 																<label for="turbidez">Turbidez t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="turbidez_t" name="ensayo[turbidez_t]" value="<%= (ensayos[index].turbidez_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="turbidez_t" name="ensayo[turbidez_t]" value="<%= (ensayos[index].turbidez_t).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -359,7 +359,7 @@
 																<label for="isocianuro">Isocianuro m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="isocianuro_m" name="ensayo[isocianuro_m]" value="<%= (ensayos[index].isocianuro_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="isocianuro_m" name="ensayo[isocianuro_m]" value="<%= (ensayos[index].isocianuro_m).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -368,7 +368,7 @@
 																<label for="isocianuro">Isocianuro t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="isocianuro_t" name="ensayo[isocianuro_t]" value="<%= (ensayos[index].isocianuro_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="isocianuro_t" name="ensayo[isocianuro_t]" value="<%= (ensayos[index].isocianuro_t).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -390,7 +390,7 @@
 																<label for="bromo">Bromo m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="bromo_m" name="ensayo[bromo_m]" value="<%= (ensayos[index].bromo_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="bromo_m" name="ensayo[bromo_m]" value="<%= (ensayos[index].bromo_m).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -399,7 +399,7 @@
 																<label for="bromo">Bromo t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="bromo_t" name="ensayo[bromo_t]" value="<%= (ensayos[index].bromo_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="bromo_t" name="ensayo[bromo_t]" value="<%= (ensayos[index].bromo_t).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -421,7 +421,7 @@
 																<label for="cloro">Cloro m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="cloro_m" name="ensayo[cloro_m]" value="<%= (ensayos[index].cloro_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="cloro_m" name="ensayo[cloro_m]" value="<%= (ensayos[index].cloro_m).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -430,7 +430,7 @@
 																<label for="cloro">Cloro t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="cloro_t" name="ensayo[cloro_t]" value="<%= (ensayos[index].cloro_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="cloro_t" name="ensayo[cloro_t]" value="<%= (ensayos[index].cloro_t).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -452,7 +452,7 @@
 																<label for="cloro_combinado">Cloro C m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="cloro_combinado_m" name="ensayo[cloro_combinado_m]" value="<%= (ensayos[index].cloro_combinado_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="cloro_combinado_m" name="ensayo[cloro_combinado_m]" value="<%= (ensayos[index].cloro_combinado_m).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -461,7 +461,7 @@
 																<label for="cloro_combinado">Cloro C t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="cloro_combinado_t" name="ensayo[cloro_combinado_t]" value="<%= (ensayos[index].cloro_combinado_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="cloro_combinado_t" name="ensayo[cloro_combinado_t]" value="<%= (ensayos[index].cloro_combinado_t).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -491,7 +491,7 @@
 																<label for="humedad">Humedad m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="humedad_m" name="ensayo[humedad_m]" value="<%= (ensayos[index].humedad_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="humedad_m" name="ensayo[humedad_m]" value="<%= (ensayos[index].humedad_m).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -500,7 +500,7 @@
 																<label for="humedad">Humedad t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="humedad_t" name="ensayo[humedad_t]" value="<%= (ensayos[index].humedad_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="humedad_t" name="ensayo[humedad_t]" value="<%= (ensayos[index].humedad_t).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -522,7 +522,7 @@
 																<label for="co2_interior">CO2 Int m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="co2_interior_m" name="ensayo[co2_interior_m]" value="<%= (ensayos[index].co2_interior_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="co2_interior_m" name="ensayo[co2_interior_m]" value="<%= (ensayos[index].co2_interior_m).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -531,7 +531,7 @@
 																<label for="co2_interior">CO2 Int t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="co2_interior_t" name="ensayo[co2_interior_t]" value="<%= (ensayos[index].co2_interior_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="co2_interior_t" name="ensayo[co2_interior_t]" value="<%= (ensayos[index].co2_interior_t).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -553,7 +553,7 @@
 																<label for="co2_exterior">CO2 Ext m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="co2_exterior_m" name="ensayo[co2_exterior_m]" value="<%= (ensayos[index].co2_exterior_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="co2_exterior_m" name="ensayo[co2_exterior_m]" value="<%= (ensayos[index].co2_exterior_m).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -562,7 +562,7 @@
 																<label for="co2_exterior">CO2 Ext t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="co2_exterior_t" name="ensayo[co2_exterior_t]" value="<%= (ensayos[index].co2_exterior_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="co2_exterior_t" name="ensayo[co2_exterior_t]" value="<%= (ensayos[index].co2_exterior_t).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -618,7 +618,7 @@
 																<label for="legionella">Legionella m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="legionella_m" name="ensayo[legionella_m]" value="<%= (ensayos[index].legionella_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="legionella_m" name="ensayo[legionella_m]" value="<%= (ensayos[index].legionella_m).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -627,7 +627,7 @@
 																<label for="legionella">Legionella t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="legionella_t" name="ensayo[legionella_t]" value="<%= (ensayos[index].legionella_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="legionella_t" name="ensayo[legionella_t]" value="<%= (ensayos[index].legionella_t).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -758,7 +758,7 @@
 																<label for="langelier">Langelier m</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="langelier_m" name="ensayo[langelier_m]" value="<%= (ensayos[index].langelier_m).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="langelier_m" name="ensayo[langelier_m]" value="<%= (ensayos[index].langelier_m).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
@@ -767,7 +767,7 @@
 																<label for="langelier">Langelier t</label>
 															</div>
 															<div class="col-md-6">
-																<input type="text" class="form-control" id="langelier_t" name="ensayo[langelier_t]" value="<%= (ensayos[index].langelier_t).toFixed(1) %>" step="0.01"/>
+																<input type="number" class="form-control" id="langelier_t" name="ensayo[langelier_t]" value="<%= (ensayos[index].langelier_t).toFixed(1) %>" step="0.1"/>
 															</div>
 														</div>
 
