--- a/views/user/_form.ejs
+++ b/views/user/_form.ejs
@@ -56,25 +56,20 @@
 
 
 		<%} else {%>
-
 			<% user.centro = session.user.centro %>
-
 			<input type="text" class="form-control hidden" id="centro" name="user[centro]" value="<%= user.centro %>"/>
 <!--			<input type="text" class="form-control hidden" id="isAdmin" name="user[isAdmin]" value="<%= user.isAdmin %>"/> -->
-
 		<%}%>
 
-
-		<div class="form-group">
-			<div class="col-sm-12 text-center">
-
-				<a href="/user"><button class="btn btn-danger btn-sm" type="button"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancelar</button></a>
-
-				<button class="btn btn-success btn-sm" type="submit" id="grabar" value="Salvar">
-					<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Grabar
-				</button>
-
-			</div>
+		<div class="form-group text-center">
+			<ul class="tira_botones">
+				<li><a class="btn btn_gral btn_cancelar" href="/user">
+					Cancelar
+				</a></li>
+				<li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
+					Grabar
+				</button></li>
+			</ul>
 		</div>
 
 	</div>
