css table from spinner

--- a/public/stylesheets/pc.css
+++ b/public/stylesheets/pc.css
@@ -14,16 +14,33 @@
 
 	body {
 
-/*		font-family     : 'Kalinga', Calibri, Arial, sans-serif; */
+		font-family     : 'Kalinga', Calibri, Arial, sans-serif;
 
 	}
 
 
 	.panel {
 
-		border-radius: 0px;
+		border-radius: 1.5px;
+
 
 	}
+
+	.form-control {
+
+		border: 1px solid #ccc;
+		border-color:  #81BEF7;
+		border-radius: 1.5px;
+
+	}
+
+	.form-group {
+
+		margin-bottom: 10px;
+
+	}
+
+
 
 
 	.table-striped > tbody > tr:nth-of-type(2n+1) {			/* estilo de los row impares de todas las tablas */
@@ -47,6 +64,14 @@
 
 		padding: 5px;
 		border: none;
+
+	}
+
+	.table > thead > tr > th {
+
+/*		border-bottom: 1px solid #81BEF7;					/* borde del thead */
+		border-bottom: 1px solid #ddd;					/* borde del thead */
+
 
 	}
 
@@ -114,7 +139,7 @@
 		background-color: transparent;
 		text-align: center;
 		border: 1px solid #81BEF7;
-		border-radius: 0;
+		border-radius: 1.5px;
 /*		border-radius: 5px 5px 5px 5px; */
 		text-decoration: none;
 		outline: 0;
@@ -1024,6 +1049,7 @@
 		padding: 20px 20px 20px 20px;
 
 		border: 1px solid #D8D8D8;
+		border-radius: 1.5px;
 
 	}
 
@@ -1037,7 +1063,7 @@
 
 	#siloes_index img {
 
-		width: 30px;
+		width: 28px;
 
 	}
 
@@ -1091,8 +1117,8 @@
 		min-height: 160px;
 		margin-bottom: 30px;
 		padding: 10px;
-		border:	1px solid #585858;
-		border-radius: 5px;
+		border:	1px solid #ddd;
+		border-radius: 1.5px;
 		font-size: 12px;
 /*		color: white;
 		background-color: #3d4045;
@@ -1124,6 +1150,7 @@
 		padding: 20px 20px 20px 20px;
 
 		border: 1px solid #D8D8D8;
+		border-radius: 1.5px;
 
 
 	}
@@ -1231,18 +1258,5 @@
 		margin-top: 10vh;
 
 		border: 1px solid #ccc;
-
-	}
-
-
-
-
-
-
-
-
-	.form-group {
-
-		margin-bottom: 10px;
 
 	}
