--- a/public/stylesheets/movil.css
+++ b/public/stylesheets/movil.css
@@ -10,6 +10,10 @@
 @media handheld, only screen and (max-width: 767px) {			/* movil */
 
 
+    .avisos {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 
 
     /* INICIO =============================================================== */
