--- a/public/stylesheets/pc.css
+++ b/public/stylesheets/pc.css
@@ -111,7 +111,16 @@
 	}
 
 
+	.avisos {
+		max-width: 700px;
+		margin: 100px auto 20px auto;
+		position: relative;
+	}
 
+
+
+
+	/*  ESTILO DE LOS BOTONES DE LOS FORM ************************************************** */
 
 	.tira_botones {
 		margin: 0px;
