--- a/views/avisos/aviso_max_contadores.ejs
+++ b/views/avisos/aviso_max_contadores.ejs
@@ -1,7 +1,7 @@
 
     <!-- MODAL aviso maximo contadores ===================================================================================== -->
 
-    <div class="alert alert-info avisos" role="alert">
+    <div class="alert alert-info avisos animated animated-fast fadeIn" role="alert">
 
         <h5>Ha alcanzado el máximo de contadores. Para más informarción contacte con el administrador de este sitio web.</h5>
         <div class="form-group text-center">
