--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -87,6 +87,7 @@
 
 					<li><a href="/siloes"><img src="/images/probetas.png" alt="" /> Ensayos </a></li>
 					<li><a href="/vasos"><img src="/images/vasos.png" alt="" /> Vasos </a></li>
+					<li><a href="/siloes/resumen_index"><img src="/images/consumos2.png" alt="" /> Siloes </a></li>
 
 
 					<% if (session.user) {
