--- a/views/siloes/resumen.ejs
+++ b/views/siloes/resumen.ejs
@@ -2,6 +2,8 @@
 
 <div class="container-fluid animated animated-fast fadeIn margen_superior" id="resumen">
 
+
+
     <div class="row" id="head_consumos">
 
         <h4>&nbsp;&nbsp;<img src="/images/consumos2.png" alt="" /> Siloes</h4>
@@ -67,14 +69,12 @@
     <br>
 
 
-
-
         <h5>vaso: <%= vaso.nombre %></h5>
-        <h5>cantidad de ph_true: <%= ph_true %></h5>
-        <h5>cantidad de ph_false: <%= ph_false %></h5>
-        <h5>maximo ph: <%= ph_maximo %></h5>
-        <h5>minimo ph: <%= ph_minimo %></h5>
-        <h5>cantidad de ph: <%= ph_total %></h5>
+
+        <% include resultados_ph.ejs %>
+
+
+
 
 
 
