--- a/views/siloes/resultados_ph.ejs
+++ b/views/siloes/resultados_ph.ejs
@@ -11,3 +11,4 @@
 
     <h5>cantidad de redox_true: <%= redox_true %></h5>
     <h5>cantidad de redox_false: <%= redox_false %></h5>
+    <h5>maximo redox: <%= redox_maximo %></h5>
