--- a/views/siloes/resultados_ph.ejs
+++ b/views/siloes/resultados_ph.ejs
@@ -12,3 +12,4 @@
     <h5>cantidad de redox_true: <%= redox_true %></h5>
     <h5>cantidad de redox_false: <%= redox_false %></h5>
     <h5>maximo redox: <%= redox_maximo %></h5>
+    <h5>media redox: <%= redox_medio %></h5>
