Cambio de titulo de layout

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Jose Juan Montoyo Coronati">
 <!--	<meta name="google-site-verification" content="qB4EJYsedM-QXqZpbtiVOtYFr9TI50Nb8UF3xkLRq6A"/> -->
-	<title>Contadores</title>
+	<title>Registros de Mantenimiento</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
